Changed the spec template

--- a/generators/poolspec/templates/pool_spec_template.erb
+++ b/generators/poolspec/templates/pool_spec_template.erb
@@ -1,8 +1,8 @@
 # Basic poolparty template
 
-pool <%= @name -%> do
+pool :<%= name -%> do
 
-  cloud <%= @name -%> do
+  cloud :app do
   
   end
 
