--- a/website/stylesheets/screen.css
+++ b/website/stylesheets/screen.css
@@ -77,24 +77,34 @@ td {
 .unknown {
 	color: #995000;
 }
-pre, code {
-  font-family: monospace;
-  font-size: 90%;
-  line-height: 1.4em;
-  color: #ff8;
-  background-color: #111;
-  padding: 2px 10px 2px 10px;
+pre {
+    background-color: #f1f1f3;
+    color: #112;
+    padding: 10px;
+    font-size: 1.1em;
+    overflow: auto;
+    margin: 4px 0px;
 }
-.comment { color: #aaa; font-style: italic; }
-.keyword { color: #eff; font-weight: bold; }
-.punct { color: #eee; font-weight: bold; }
-.symbol { color: #0bb; }
-.string { color: #6b4; }
-.ident { color: #ff8; }
-.constant { color: #66f; }
-.regex { color: #ec6; }
-.number { color: #F99; }
-.expr { color: #227; }
+
+/* Syntax highlighting */
+pre .normal {}
+pre .comment { color: #005; font-style: italic; }
+pre .keyword { color: #A00; font-weight: bold; }
+pre .method { color: #077; }
+pre .class { color: #074; }
+pre .module { color: #050; }
+pre .punct { color: #447; font-weight: bold; }
+pre .symbol { color: #099; }
+pre .string { color: #944; }
+pre .char { color: #F07; }
+pre .ident { color: #004; }
+pre .constant { color: #07F; }
+pre .regex { color: #B66; background: #FEF; }
+pre .number { color: #A11; }
+pre .attribute { color: #5bb; }
+pre .global { color: #7FB; }
+pre .expr { color: #227; }
+pre .escape { color: #277; }
 
 #version {
   float: right;
@@ -135,4 +145,3 @@ pre, code {
 	cursor:	pointer; 
 	cursor:	hand;
 }
-
