--- a/website/template.html.erb
+++ b/website/template.html.erb
@@ -8,6 +8,7 @@
       <%= title %>
   </title>
   <script src="javascripts/rounded_corners_lite.inc.js" type="text/javascript"></script>
+  <link href="stylesheets/code.css" media="screen" rel="stylesheet" type="text/css" />
 <style>
 
 </style>
