Starting logger in cloud pool

--- a/lib/erlang/cloudpanel/priv/www/partials/menu.html
+++ b/lib/erlang/cloudpanel/priv/www/partials/menu.html
@@ -3,7 +3,7 @@
   <div id='navmenu'>
     <ul>
       <li>
-        <a href='#soon'>Check it out</a>
+        <a href='/tail'>Tail the syslog</a>
       </li>
       <li>
         <a href='#soon'>More stuff</a>
