--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   font-size: 65.5%;
   font-family: Arial;
-  background: url(images/site/mainbg6.png) repeat-x #F7D2A8;
+  background: url(mainbg6.png) repeat-x #F7D2A8;
   color: #646451;
   position: relative; }
   body a {
