more work on apache plugin. added virtual host template. virtual hosts nearly work

--- a/lib/poolparty/templates/apache2/base.conf.erb
+++ b/lib/poolparty/templates/apache2/base.conf.erb
@@ -164,4 +164,5 @@ LogFormat "%{User-agent}i" agent
 
 DocumentRoot /var/www
 
-NameVirtualHost *
+Listen <%= @node[:poolparty][:port] %>
+NameVirtualHost *:<%= @node[:poolparty][:port] %>
