--- a/lib/poolparty/templates/apache2/default-site.conf.erb
+++ b/lib/poolparty/templates/apache2/default-site.conf.erb
@@ -1,5 +1,4 @@
-# Listen <%= @node[:poolparty][:port] %>
-<VirtualHost *>
+<VirtualHost *:<%= @node[:poolparty][:port] %>>
 	ServerAdmin webmaster@localhost
 
 	DocumentRoot /var/www
