--- a/lib/provision/configure_scripts/configure_ubuntu.erb
+++ b/lib/provision/configure_scripts/configure_ubuntu.erb
@@ -6,4 +6,4 @@ echo <%= pool.name %> > /etc/poolparty/pool_name
 
 # Copy ssh keys
 cp /var/poolparty/dependencies/keys/* /var/poolparty/.ssh/
-chmod 600 /root/.ssh/<%= cloud.keypair_name %>
+chmod 600 /root/.ssh/<%= cloud.keypair.basename %>
