Add private keyapir to /etc/poolparty/keys/ on instance configure. Add ec2 specific steps to configure! on ec2_instances. Add a method to call right_aws directly from an instance. Change name of ecualyptus_cert to cloud_cert Run cloud.configure! and cloud.run threaded by default.

--- a/lib/provision/configure_scripts/configure_ubuntu.erb
+++ b/lib/provision/configure_scripts/configure_ubuntu.erb
@@ -4,7 +4,4 @@
 
 echo <%= cloud.name %> > /etc/poolparty/cloud_name
 echo <%= pool.name %> > /etc/poolparty/pool_name
-
-# Copy ssh keys
-# cp /var/poolparty/dependencies/keys/* /var/poolparty/.ssh/
-# chmod 600 /root/.ssh/<%= cloud.keypair.basename %>
+mkdir -p /etc/poolparty/keys
